; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_idx_to_str.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_idx_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32*)* @idx_to_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @idx_to_str(i32 %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  store i32 48, i32* %9, align 4
  %10 = load i32*, i32** %5, align 8
  store i32* %10, i32** %3, align 8
  br label %26

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %15, %11
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load i32, i32* %4, align 4
  %17 = srem i32 %16, 10
  %18 = add nsw i32 48, %17
  %19 = load i32*, i32** %5, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 -1
  store i32* %20, i32** %5, align 8
  store i32 %18, i32* %19, align 4
  %21 = load i32, i32* %4, align 4
  %22 = sdiv i32 %21, 10
  store i32 %22, i32* %4, align 4
  br label %12

23:                                               ; preds = %12
  %24 = load i32*, i32** %5, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 1
  store i32* %25, i32** %3, align 8
  br label %26

26:                                               ; preds = %23, %8
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
